src/test/deca/context/valid/class/method/modif_param.deca
// Description:
//    Test de modification d'un paramètre entré
//
// Resultats:
//    aucune erreur
//

class A {
	void m(A b) {
		b = new A();
		b = null;
	}
}

{}