src/test/deca/context/invalid/class/calls/field_instead_of_method.deca
// Description:
//    Appel d'un champ alors que le nom correspond à une méthode
//
// Resultats:
//    is not a field

class A {
	int a () {

	}
}

{
	A inst;
	int a = a();
}

